<resources>
    <string name="app_name">Ujjawal</string>
    <string name="hindi">हिन्दी</string>
    <string name="selectlanguage">Please select your langauge</string>
    <string name="changeLanguage">You can change the language at any time</string>
    <string name="aa">आ</string>
    <string name="A">A</string>
    <string name="english">English</string>
    <string name="hinglish">Hinglish</string>
    <string name="punjabi">ਪੰਜਾਬੀ</string>
    <string name="tamil">தமிழ்</string>
    <string name="kanada">ಕನ್ನಡ</string>
    <string name="Marathi">मराठी</string>
    <string name="aaa">आ-A</string>
    <string name="marathi">म</string>
    <string name="punA">ਏ</string>
    <string name="kanA">ಎ</string>
    <string name="tamA">ஒரு></string>
    <string name="telA">ఒక</string>
    <string name="telugu">తెలుగు</string>
    <string name="Continue">Continue</string>


    <string name="app_intro_meeting_desc">Access the largest network of agriculture commodity traders</string>
    <string name="app_intro_chat_desc">More than 25000 sellers(Suppliers) and Buyers (Commission Agents)</string>
    <string name="app_intro_meeting_history_desc">Get the best rates from over 1500 mandis all over India</string>

    <string name="blank"> </string>
    <string name="help">Help?</string>
    <string name="phonelikhe">Please enter your mobile number</string>
    <string name="terms">By Registering. I agree to ujjawal T&amp;C</string>
    <string name="entermobile">Mobile Number</string>
    <string name="enterotp">Enter OTP</string>
    <string name="otplikhe">Please enter OTP</string>
    <string name="mandiRta">Mandi Rates</string>
    <string name="getReal">Get real time mandi rates</string>
    <string name="onion">Onion</string>
    <string name="beetroot">Beetroot</string>
    <string name="Patato">Potato</string>
    <string name="Maize">Maize</string>
    <string name="checkRate">Check Rate</string>
    <string name="review">Review from our users</string>
    <string name="feedback1">Earlier i was able to send my vegetables to a few locations only but after joining Ujjwal I have got new buyers, now to get good rated of vegatables and my business is already done much better.</string>
    <string name="feedback2">Earlier i was able to send my vegetables to a few locations only but after joining Ujjwal I have got new buyers, now to get good rated of vegatables and my business is already done much better.</string>
    <string name="feedback3">Earlier i was able to send my vegetables to a few locations only but after joining Ujjwal I have got new buyers, now to get good rated of vegatables and my business is already done much better.</string>
    <string name="feedback4">Earlier i was able to send my vegetables to a few locations only but after joining Ujjwal I have got new buyers, now to get good rated of vegatables and my business is already done much better.</string>
    <string name="name1">Nipun jain</string>
    <string name="name2">Harshad Pawar</string>
    <string name="name3">Nrupul Dev</string>
    <string name="name4">Yogesh Bhatt</string>
    <string name="location1">Agra Uttar, Pradesh</string>
    <string name="location2">Puna, Maharashtra</string>
    <string name="location3">Bengaluru, Karnataka</string>
    <string name="location4">Bengaluru, Karnataka</string>

    <string name="fm1">Chamaraj Nagar</string>
    <string name="fm2">Abhay Agnihotri</string>
    <string name="fm3">Ishan Yadav</string>
    <string name="fm4">karan Sharma</string>
    <string name="fm5">Kunal singh</string>
    <string name="fm6">Sahil Verma</string>
    <string name="fm7">Anubhav Singh</string>
    <string name="fm8">Sagar Singh</string>
    <string name="d1">Rate on 2021-06-25</string>
    <string name="d2">Rate on 2021-03-24</string>
    <string name="d3">Rate on 2021-06-23</string>
    <string name="d4">Rate on 2021-04-22</string>
    <string name="d5">Rate on 2021-06-21</string>
    <string name="d6">Rate on 2021-06-20</string>
    <string name="d7">Rate on 2021-05-19</string>
    <string name="d8">Rate on 2021-06-18</string>
    <string name="r1">₹2800/Quintal</string>
    <string name="r2">₹2000/Quintal</string>
    <string name="r3">₹2500/Quintal</string>
    <string name="r4">₹2300/Quintal</string>
    <string name="r5">₹2400/Quintal</string>
    <string name="r6">₹2350/Quintal</string>
    <string name="r7">₹2220/Quintal</string>
    <string name="r8">₹2900/Quintal</string>
    <string name="m1">Min ₹2400 - Max ₹3000</string>
    <string name="m2">Min ₹1000 - Max ₹1200</string>
    <string name="m3">Min ₹3000 - Max ₹3440</string>
    <string name="m4">Min ₹2000 - Max ₹2500</string>
    <string name="m5">Min ₹3000 - Max ₹3500</string>
    <string name="m6">Min ₹2400 - Max ₹2600</string>
    <string name="m7">Min ₹3000 - Max ₹2900</string>
    <string name="m8">Min ₹2000 - Max ₹2500</string>
    <string name="k1">76 km</string>
    <string name="k2">30 km</string>
    <string name="k3">130 km</string>
    <string name="k4">53 km</string>
    <string name="k5">46 km</string>
    <string name="k6">63 km</string>
    <string name="k7">83 km</string>
    <string name="k8">23 km</string>
    <string name="mandis">Mandis</string>
    <string name="add_new_order">Add New Order</string>
    <string name="add_order">Add Order</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="location">Location</string>
    <string name="commodity">Commodity</string>
    <string name="enter_business_name">Enter Business Name</string>
    <string name="add">Add</string>
    <string name="orderAdd">Order Added</string>
    <string name="safe_secure_trans">Your transactions with B &amp; B are completely secure and private.</string>
    <string name="postSupply">Post Supply</string>
    <string name="SellCommodities">Sell Commodities</string>
    <string name="call">call</string>
    <string name="number">121</string>
    <string name="language">Language</string>
    <string name="select_your_language">Select your language</string>
    <string name="kyc">KYC</string>
    <string name="complete_your_kyc">Complete your KYC</string>
    <string name="bank_account">Bank Account</string>
    <string name="add_bank_account_details">Add bank account details</string>
    <string name="refer_to_earn">Refer to Earn</string>
    <string name="refer_your_friends_to_earn_cash">Refer your friends to earn cash</string>
    <string name="rate_us">Rate Us</string>
    <string name="your_feedback_is_valuable_to_us">Your feedback is valuable to us</string>
    <string name="my_profile">My Profile</string>
    <string name="news">News</string>
    <string name="NewsAppBar">agriculture News</string>
    <string name="Aa">Aa</string>
    <string name="Help">Help?</string>
    <string name="Select_Profile">Please select your profile</string>
    <string name="CommissionAgent">Commission Agent</string>
    <string name="Supplier">Farmer</string>
    <string name="Buyer">Buyer</string>
    <string name="Add_Supplyer">Add New Supply</string>
    <string name="enter_crop_img_path">enter crop image path</string>
</resources>