<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtpActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_login" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/ic_language" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/otplikhe"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/opt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_50"
            android:hint="@string/enterotp"
            android:outlineAmbientShadowColor="@color/green_dark"
            android:outlineSpotShadowColor="@color/green_dark"
            android:drawablePadding="@dimen/dp_20"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_50"
            android:text="@string/terms"
            android:drawableStart="@drawable/ic_exclamation_mark_svgrepo_com"
            android:drawablePadding="@dimen/dp_20"
            />



    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/round_rectangle"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_30"
                android:paddingRight="@dimen/dp_30"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>