<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MandiRateActvity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:background="@drawable/green_card"
        >
        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_mandi_rate" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/white_circle"
                android:layout_alignBottom="@+id/app_bar_main"
                android:layout_alignParentEnd="true"
                android:src="@drawable/onion_image"
                android:layout_marginRight="6dp"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginBottom="1dp"
                >

            </ImageView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/cropName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beetroot"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_17"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_blue"
                    android:drawableTint="@color/white"
                    android:text="@string/mandis"
                    android:textColor="@color/white"
                    android:alpha="0.6"
                    android:drawablePadding="@dimen/dp_3"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r1"
                    android:textColor="@color/white"
                    android:alpha="0.6"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:alpha="0.9"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_5"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"

/>
</LinearLayout>