<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="@dimen/dp_5">


        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="370dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="@dimen/dp_20">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ribbon"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_gravity="end"
                    android:drawableStart="@drawable/ic_star_yellow"
                    android:paddingStart="@dimen/dp_20"
                    android:drawablePadding="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="PAYMENT GURANTEE"
                    android:textColor="@color/white" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dp_30"

                    >


                    <TextView
                        android:id="@+id/BusinessName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_100"
                        android:layout_marginTop="@dimen/dp_35"
                        android:text="Nipun jain"
                        android:textSize="@dimen/dp_20"
                        android:textStyle="bold"
                        android:textColor="@color/black" />


                    <TextView
                        android:id="@+id/location1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_100"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_toEndOf="@id/imageView"
                        android:layout_toRightOf="@id/imageView"
                        android:alpha="0.9"
                        android:drawableStart="@drawable/ic_location_blue"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableTint="@color/grey"
                        android:gravity="center_vertical"
                        android:text="Agra, uttarPradesh"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_13" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dp_20">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/dp_70"
                        android:layout_height="@dimen/dp_70"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginTop="@dimen/dp_40"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:contentDescription="Icon"
                        android:gravity="center_horizontal"
                        android:src="@drawable/beetroot">


                    </de.hdodenhof.circleimageview.CircleImageView>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginTop="@dimen/dp_20"
                            android:drawableStart="@drawable/ic_star_yellow"
                            android:paddingStart="@dimen/dp_0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_5"
                            android:layout_marginTop="@dimen/dp_20"
                            android:drawableStart="@drawable/ic_star_yellow"
                            android:paddingStart="@dimen/dp_0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_5"
                            android:layout_marginTop="@dimen/dp_20"
                            android:drawableStart="@drawable/ic_star_yellow"
                            android:paddingStart="@dimen/dp_0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_5"
                            android:layout_marginTop="@dimen/dp_20"
                            android:drawableStart="@drawable/ic_star_yellow"
                            android:paddingStart="@dimen/dp_0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3.6"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginStart="@dimen/dp_5" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/crop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/beetroot"
                            android:layout_marginStart="@dimen/dp_20"
                            android:textSize="@dimen/dp_15"
                            android:layout_marginTop="@dimen/dp_15"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/imageView2"
                                android:layout_width="@dimen/dp_40"
                                android:layout_height="@dimen/dp_40"
                                android:layout_marginStart="@dimen/dp_15"
                                android:layout_marginTop="@dimen/dp_20"
                                android:layout_marginEnd="@dimen/dp_16"
                                android:contentDescription="Icon"
                                android:gravity="center_horizontal"
                                android:src="@drawable/ic_account_125dp">

                            </de.hdodenhof.circleimageview.CircleImageView>

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Contact Person"
                                    android:layout_marginTop="@dimen/dp_20"
                                    android:textSize="@dimen/dp_10" />

                                <TextView
                                    android:id="@+id/name1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Rakesh Sonkar"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    android:layout_marginTop="@dimen/dp_3" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <androidx.appcompat.widget.AppCompatButton
                                android:layout_width="@dimen/dp_150"
                                android:layout_height="@dimen/dp_40"
                                android:layout_marginTop="@dimen/dp_50"
                                android:layout_marginStart="@dimen/dp_20"
                                android:text="@string/add_order"
                                android:textColor="@color/white"
                                android:drawableEnd="@drawable/ic_iconfinder_2639879_order_icon"
                                android:drawableTint="@color/white"
                                android:paddingEnd="@dimen/dp_20"
                                android:background="@drawable/green_card_2"/>
                            <androidx.appcompat.widget.AppCompatButton
                               android:id="@+id/BtnCall"
                                android:layout_width="@dimen/dp_150"
                                android:layout_height="@dimen/dp_40"
                                android:layout_marginTop="@dimen/dp_50"
                                android:layout_marginStart="@dimen/dp_20"
                                android:text="@string/call"
                                android:textColor="@color/green_dark"
                                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                                android:paddingStart="@dimen/dp_50"

                                android:background="@drawable/green_ring"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>